# futebola

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  admin.py  apps.py  manage.py  models.py  pyproject.toml  requirements.txt  urls.py  views.py
futebola/: admin.py  apps.py  constants.py  models.py  urls.py  views.py
futebola/migrations/: 0001_initial.py  0002_ficha_de_jogo_equipa.py  0003_auto_20170726_1456.py  0004_auto_20170726_1502.py  0005_auto_20170726_1513.py  0006_auto_20170727_1423.py  0007_auto_20171124_1438.py  0008_epoca.py  0009_jogo_epoca.py  0010_epoca_epoca_num.py  0011_auto_20180102_1611.py  0012_auto_20180102_1614.py  0013_auto_20180105_0940.py  0014_auto_20180326_1633.py  0015_auto_20191010_1325.py  0016_jogador_foto.py  0017_penalizacao_game_alter_jogador_foto_and_more.py
futebola/templates/futebola/: gerarEquipas.html  (+9 more)
futebola/templatetags/: jogador_extras.py
futebola_labs/: asgi.py  settings.py  urls.py  wsgi.py
migrations/: 0001_initial.py  0002_ficha_de_jogo_equipa.py  0003_auto_20170726_1456.py  0004_auto_20170726_1502.py  0005_auto_20170726_1513.py  0006_auto_20170727_1423.py  0007_auto_20171124_1438.py  0008_epoca.py  0009_jogo_epoca.py  0010_epoca_epoca_num.py  0011_auto_20180102_1611.py  0012_auto_20180102_1614.py  0013_auto_20180105_0940.py  0014_auto_20180326_1633.py  0015_auto_20191010_1325.py  0016_jogador_foto.py
templates/futebola/: gerarEquipas.html  index.html  jogador.html  jogo.html  layout.html  numEpoca.html  penalizacoes.html  regras.html  tops.html  verEquipasGeradas.html
templatetags/: jogador_extras.py
(+4 files in other folders)
