[tool.poetry]
name = "futebola"
version = "1.1.0"
description = "Amateur football stats acumulator"
authors = ["mafmartins <marcio.af.martins@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=4.0"
django-debug-toolbar = "^3.2.3"
mysqlclient = "^2.1.0"
Pillow = "^9.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
